--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
         <div id="counter-card" class="card-body">
             <p>Luis Marquez</p>
             <p id="score">Eliminados:</p>
+            <p id="lives">Eliminados:</p>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/gifler@0.1.0/gifler.min.js"></script>
 
     <script src="js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
