--- a/index.html
+++ b/index.html
@@ -6,46 +6,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POO con Canvas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        #lives {
+    pointer-events: none;
+}
+
+    </style>
 </head>
 
 <body class="bg-dark text-white">
 
+    <div class="card p-1 m-2 shadow-lg">
+        <h2 class="text-center">Fix-It Felix</h2>
+    </div>
+
     <div class="container my-1">
-        <!-- Card para el jugador y su puntaje -->
-        <div class="card p-1 my-2 shadow-lg">
-            <h2 class="text-center">Fix-It Felix</h2>
-
-        </div>
-
-        <!-- Canvas para el juego -->
-        <div class="d-flex justify-content-center mb-2">
-            <canvas id="gameCanvas" width="400" height="600" class="border border-light position-relative"></canvas>
-            <!-- Llamada al div con las vidas en la esquina inferior derecha -->
-            <div id="lives" class="d-flex justify-content-end align-items-center position-absolute bottom-0 end-0 m-3">
-                <img src="assets/heart.png" class="mx-1" alt="Corazón 1" width="30">
-                <img src="assets/heart.png" class="mx-1" alt="Corazón 2" width="30">
-                <img src="assets/heart.png" class="mx-1" alt="Corazón 3" width="30">
-            </div>
-        </div>
+        <!-- Sección del juego y la información -->
         <div class="row">
-            <div class="col-md-6 mb-4">
-                <!-- Información del jugador -->
-                <div id="player-info" class="d-flex flex-column align-items-start">
+
+
+
+            <!-- Sección del Canvas para el juego -->
+            <div class="col-12 col-lg-6 mb-2 d-flex mx-auto justify-content-center position-relative">
+                <canvas id="gameCanvas" width="400" height="600" class="border border-light"></canvas>
+
+                <!-- Llamada al div con las vidas en la esquina inferior derecha -->
+                <div id="lives" class="pointer-events-none justify-content-end align-items-center position-absolute bottom-0 end-0 m-3">
+                    <img src="assets/heart.png" class="mx-1 pointer-events-none" alt="Corazón 1" width="30">
+                    <img src="assets/heart.png" class="mx-1 pointer-events-none" alt="Corazón 2" width="30">
+                    <img src="assets/heart.png" class="mx-1 pointer-events-none" alt="Corazón 3" width="30">
+                </div>
+                
+                
+            </div>
+            <!-- Card para el jugador y su puntaje -->
+            <div class="col-12 col-lg-3 mb-4 order-lg-first">
+                <div id="player-info" class="card-lg-4 shadow-lg">
                     <h5 id="playerName" class="my-0">Jugador: User</h5>
                     <div id="score" class="h5 my-0">Score: 0</div>
                 </div>
             </div>
-            <div class="col-md-6 text-end">
-                <!-- Puedes eliminar el contenedor de vidas aquí, se moverá al canvas -->
+
+            <!-- Card para los mejores puntajes -->
+            <div class="col-12 col-lg-3 mb-4">
+                <div id="top-scores" class="card p-4 shadow-lg">
+                    <h5 class="card-title text-center">Mejores Puntajes</h5>
+                    <div id="score-list" class="list-group mt-3">
+                        <!-- Los puntajes se agregarán aquí dinámicamente -->
+                    </div>
+                </div>
             </div>
+
         </div>
-        <!-- Sección de los mejores puntajes -->
-        <div id="top-scores" class="card p-4 shadow-lg">
-            <h3 class="card-title text-center">Mejores Puntajes</h3>
-            <div id="score-list" class="list-group mt-3">
-                <!-- Los puntajes se agregarán aquí dinámicamente -->
-            </div>
-        </div>
+
+
+
     </div>
 
     <!-- Librerías externas -->
