--- a/index.html
+++ b/index.html
@@ -10,15 +10,22 @@
         #lives {
     pointer-events: none;
 }
+    #title {
+        margin: 0 auto;
+
+    }
 
     </style>
 </head>
 
 <body class="bg-dark text-white">
 
-    <div class="card p-1 m-2 shadow-lg">
-        <h2 class="text-center">Fix-It Felix</h2>
-    </div>
+    <nav class="d-lg-block mx-lg-5 mx-2 justify-content-center">
+
+        <div id="title" class="card p-1 px-5 m-2 shadow-lg">
+            <h2 class="text-center">Fix-It Felix</h2>
+        </div>
+    </nav>
 
     <div class="container my-1">
         <!-- Sección del juego y la información -->
@@ -62,6 +69,30 @@
 
 
     </div>
+    <!-- Footer -->
+    <footer class="bg-dark text-white py-4 mt-5">
+        <div class="container text-center">
+            <p class="mb-1">Desarrollado por <strong>Luis Carlos Marquez Strociak</strong></p>
+            <p class="mb-1">Freelancer - <strong>LuisDev</strong></p>
+            <div class="social-icons mt-3 d-flex justify-content-center">
+                <a href="https://www.linkedin.com/in/lcmarquez-strociak" target="blank" class="text-white mx-3">
+                    <i class="bi bi-linkedin h1 h3-lg"></i>
+                </a>
+                <a href="https://github.com/lcmarquez2005" target="blank" class="text-white mx-3">
+                    <i class="bi bi-github h1 h3-lg"></i>
+                </a>
+                <a href="mailto:lcarlosmarquezstrociak@gmail.com" class="text-white mx-3">
+                    <i class="bi bi-envelope h1 h3-lg"></i>
+                </a>
+            </div>
+            <p class="mt-3 mb-0">© 2025 Luis Strociak. Todos los derechos reservados.</p>
+        </div>
+    </footer>
+    
+
+<!-- Agregar los íconos de Bootstrap (si los necesitas) -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
 
     <!-- Librerías externas -->
     <!-- SweetAlert2 CSS -->
